# APIdemo

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/libs/: login-debug.aar
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/apidemo/: Book.aidl  IMyAidlInterface.aidl  IOnServerCallback.aidl
app/src/main/assets/: student.xml
app/src/main/java/com/example/apidemo/: APIDemoApplication.java  BaseActivity.java  Book.java  Father.java  IGSON.java  MainActivity.java  MyAppBarLayout.java  MyCoordinatorLayout.java  Son.java  (+1 more)
app/src/main/java/com/pkgname/: Java2CJNI.java
app/src/main/jni/: Java2C.cpp  Java2Cplus.cpp  JavaToC.c  MyLog.h  com_pkgname_Java2CJNI.h  com_pkgname_Java2CJNIplus.h
app/src/main/res/anim/: popup_in.xml  popup_out.xml  rotate_loading.xml
app/src/main/res/animator/: slide_right_in.xml
app/src/main/res/drawable/: bg_gradient.xml  ic_android_black_24dp.xml  path_usage.xml
app/src/main/res/layout/: activity_main.xml  activity_scale.xml  ad_layout.xml  constraint_layout.xml  custom_layout.xml  default_launcher_tips.xml  event_dispatch.xml  font_family_contrast.xml  fragment_viewmodel.xml  gauss_layout.xml  general_layout.xml  global_screenshot.xml  gridview_item.xml  gridview_layout.xml  item.xml  layout_appbar.xml  layout_coordinator.xml  layout_nested_demo.xml  merge_layout.xml  my_layout.xml  news_layout.xml  recycleview_header.xml  recycleviewfooter.xml  slide_layout.xml  test.xml  textview_item.xml  viewmodel.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml  detection_service_config.xml
(+255 files in other folders)
